# FlexBisonProtoype

./: CMakeLists.txt  README.md
include/: ast.hpp  builtins.hpp  interpreter.hpp
src/: ast.cpp  builtins.cpp  interpreter.cpp  lexer.l  main.cpp  parser.y
test/: test.py  tictactoe.bg
